--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       <nav class="menu">
          <div class="menu-branding">
             <div class="portrait">
-               <img src="assets/images/portrait.jpg" alt="Mihail Shestak">
+               <img src="assets/images/portrait.jpg" alt="">
             </div>
          </div>
          <ul class="menu-nav">
@@ -75,9 +75,7 @@
                посвятить всего себя! Свое свободное время я посвящаю web-программированию. Пусть сейчас я не имею
                коммерческого опыта работы в данной сфере, но я надеюсь, что в ближайшее время я получу желанное рабочее
                место и найдутся люди, которые по достоинству оценят мои навыки, желание работать и развиваться.</p>
-            <p>Я стремлюсь к идеалу. Это касается также Front-end'а. Возьмем к примеру этот сайт-портфолио. Он написан без
-               каких-либо фреймворков и сторонних библиотек. Но это не значит, что я не стремлюсь к изучению чего-то
-               новенького. Я продолжаю заниматься самообучением и осваиванием новые технологии, системы и движки, которые
+            <p>Я стремлюсь к идеалу. Это касается также Front-end'а. Я продолжаю заниматься самообучением и осваиванием новые технологии, системы и движки, которые
                очень сильно могут упростить работу современному разработчику и даже Front-end для меня не предел.
             </p>
          </div>
@@ -86,6 +84,7 @@
    <footer id="main-footer">
       Copyright &copy 2020
    </footer>
+   
 
    <script src="assets/js/app.js"></script>
 </body>
