--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 
 <head>
    <meta charset="UTF-8">
-   <link rel="stylesheet" href="assets/css/style.min.css">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-   crossorigin="anonymous">
-   
+   <link rel="stylesheet" href="assets/css/style.css">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
    <!-- Useful meta tags -->
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <meta name="robots" content="index, follow">
    <meta name="google" content="notranslate">
    <meta name="format-detection" content="telephone=no">
    <meta name="description" content="">
-   <meta name='freelancehunt' content='1104e07356b44dc' />
-   
+
    <title>Home</title>
-   
+
 </head>
 
 <body>
@@ -26,7 +25,7 @@
       <div class="menu-btn">
          <span></span>
       </div>
-   
+
       <nav class="menu">
          <div class="menu-branding">
             <div class="portrait">
@@ -57,10 +56,10 @@
          </ul>
       </nav>
    </header>
-   
+
    <main id="home">
-      <div class="bg-img">
-         <img src="assets/images/background.jpg" alt="">
+      <div class="bg-img" id="your-element-selector">
+         <!--          <img src="assets/images/background.jpg" alt=""> -->
       </div>
       <h1 class="lg-heading">
          Mihail
@@ -86,10 +85,16 @@
             <i class="fab fa-vk fa-2x"></i>
          </a>
       </div>
-   
+
    </main>
 
+
+   <script src="assets/js/three.r119.min.js"></script>
+   <script src="assets/js/vanta.globe.min.js"></script>
+
+
    <script src="assets/js/app.js"></script>
+   <script src="assets/js/script.js"></script>
 </body>
 
 </html>
