--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 
 <head>
    <meta charset="UTF-8">
-   <link rel="stylesheet" href="assets/css/style.min.css">
+   <link rel="stylesheet" href="assets/css/style.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
    crossorigin="anonymous">
    
@@ -65,6 +65,22 @@
       </h2>
       <div class="projects">
          <div class="item">
+            <a target='_blank' href="https://mihail1186.github.io/Personal-blog.github.io/">
+               <img src="assets/images/projects/Personal-blog.jpg" alt="Project">
+            </a>
+            <a target='_blank' href="https://mihail1186.github.io/PINCET.github-io/" class="btn-light">
+               <i class="fas fa-eye"></i> <span>Project</span>
+            </a>
+         </div>
+         <div class="item">
+            <a target='_blank' href="https://mihail1186.github.io/PROdengi.github.io/">
+               <img src="assets/images/projects/PROdengi.jpg" alt="Project">
+            </a>
+            <a target='_blank' href="https://mihail1186.github.io/PINCET.github-io/" class="btn-light">
+               <i class="fas fa-eye"></i> <span>Project</span>
+            </a>
+         </div>
+         <div class="item">
             <a target='_blank' href="https://mihail1186.github.io/PINCET.github-io/">
                <img src="assets/images/projects/project1.jpg" alt="Project">
             </a>
@@ -109,6 +125,7 @@
    <footer id="main-footer">
       Copyright &copy 2020
    </footer>
+   
 
    <script src="assets/js/app.js"></script>
 </body>
