--- a/work.html
+++ b/work.html
@@ -116,7 +116,7 @@
             <a target='_blank' href="https://mihail1186.github.io/Travel.github.io/">
                <img src="assets/images/projects/project5.jpg" alt="Project">
             </a>
-            <a target='_blank' href="https://mihail1186.github.io/Travel.github.io/" class="btn-light">
+            <a target='_blank' href="https://mihail1186.github.io/Travel-version_2.github.io/" class="btn-light">
                <i class="fas fa-eye"></i><span>Project</span>
             </a>
          </div>
