--- a/work.html
+++ b/work.html
@@ -113,7 +113,7 @@
             </a>
          </div>
          <div class="item">
-            <a target='_blank' href="https://mihail1186.github.io/Travel.github.io/">
+            <a target='_blank' href="https://mihail1186.github.io/Travel-version_2.github.io/">
                <img src="assets/images/projects/project5.jpg" alt="Project">
             </a>
             <a target='_blank' href="https://mihail1186.github.io/Travel-version_2.github.io/" class="btn-light">
