--- a/contact.html
+++ b/contact.html
@@ -1,89 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-   <meta charset="UTF-8">
-   <link rel="stylesheet" href="assets/css/style.min.css">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-   crossorigin="anonymous">
-   
-   <!-- Useful meta tags -->
-   <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <meta name="robots" content="index, follow">
-   <meta name="google" content="notranslate">
-   <meta name="format-detection" content="telephone=no">
-   <meta name="description" content="">
-   
-   <title>Contact</title>
-   
-</head>
-
-<body>
-
-   <header>
-      <div class="menu-btn">
-         <span></span>
-      </div>
-   
-      <nav class="menu">
-         <div class="menu-branding">
-            <div class="portrait">
-               <img src="assets/images/portrait.jpg" alt="">
-            </div>
-         </div>
-         <ul class="menu-nav">
-            <li class="nav-item current">
-               <a href="index.html" class="nav-link">
-                  Home
-               </a>
-            </li>
-            <li class="nav-item">
-               <a href="about.html" class="nav-link">
-                  About Me
-               </a>
-            </li>
-            <li class="nav-item">
-               <a href="work.html" class="nav-link">
-                  My Work
-               </a>
-            </li>
-            <li class="nav-item">
-               <a href="contact.html" class="nav-link">
-                  How To Reach Me
-               </a>
-            </li>
-         </ul>
-      </nav>
-   </header>
-   <main id="contact">
-      <h1 class="lg-heading">
-         Contact <span class="text-secondary">Me</span>
-      </h1>
-      <h2 class="sm-heading">
-         This is how you can reach me...
-      </h2>
-      <div class="boxes">
-         <div class="boxes__item">
-            <a target="_blank" href="mailto:mihail_shestak19021993@mail.ru"><span class="text-secondary boxes__link">Email:
-               </span>mihail_shestak19021993@mail.ru</a>
-         </div>
-         <div class="boxes__item">
-            <a target="_blank" href="tel:+375333763983"><span class="text-secondary boxes__link">Phone:
-               </span>+375(33)376-39-83</a>
-         </div>
-         <div class="boxes__item">
-            <a target="_blank" href="https://goo.gl/maps/e5eyW9FJcp29UGjB8"><span class="text-secondary boxes__link">Address:
-               </span class="ymaps-geolink">Republic of Belarus, Brest region, Baranovichi city</a>
-         </div>
-      </div>
-   </main>
-   <footer id="main-footer">
-      Copyright &copy 2020
-    </footer>
-   
-
-   <script src="assets/js/app.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="ru"><head>   <meta charset="UTF-8"><link rel="stylesheet" href="assets/css/style.min.css"><link rel="shortcut icon" href="favicon.ico"><!-- Useful meta tags --><meta name="format-detection" content="telephone=no"><!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> --><!-- <meta name="robots" content="noindex, nofollow"> --><!-- <meta name="google" content="notranslate"> --><!-- <meta http-equiv="x-ua-compatible" content="ie=edge"> --><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Contact</title></head><body>   <div class="wrapper">      <header class="header">   <div class="menu-btn">      <span></span>   </div>   <nav class="menu">      <div class="menu-branding">         <div class="menu__avatar avatar">            <picture><source srcset="assets/images/portrait.webp" type="image/webp"><img class="avatar__img" src="assets/images/portrait.jpg" alt="Mihail"></picture>         </div>      </div>      <ul class="menu-nav">         <li class="nav-item current">            <a href="index.html" class="nav-link">               Home            </a>         </li>         <li class="nav-item">            <a href="about.html" class="nav-link">               About Me            </a>         </li>         <li class="nav-item">            <a href="work.html" class="nav-link">               My Work            </a>         </li>         <li class="nav-item">            <a href="contact.html" class="nav-link">               How To Reach Me            </a>         </li>      </ul>   </nav></header>      <main class="page" id="contact">         <div class="_container">            <h1 class="lg-heading">               Contact <span class="text-secondary">Me</span>            </h1>            <h2 class="sm-heading">               This is how you can reach me...            </h2>            <div class="boxes">               <div class="boxes__item">                  <a class="boxes__link" target="_blank" href="tel:+375333763983"><span class="text-secondary ">Phone:                     </span>+375(33)376-39-83</a>               </div>               <div class="boxes__item">                  <a class="boxes__link" target="_blank" href="mailto:mihail_shestak19021993@mail.ru"><span                        class="text-secondary ">Email:                     </span>mihail_shestak19021993@mail.ru</a>               </div>               <div class="boxes__item">                  <a class="boxes__link" target="_blank" href="https://goo.gl/maps/e5eyW9FJcp29UGjB8"><span                        class="text-secondary ">Address:                     </span>Republic of Belarus, Brest region, Baranovichi city</a>               </div>            </div>         </div>      </main>      <footer class="footer">   <div class="footer__copyright">Copyright &#169; 2020</div></footer>   </div><!-- wrapper -->   <script src="assets/js/script.min.js"></script></body></html>
