--- a/index.html
+++ b/index.html
@@ -1,100 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-   <meta charset="UTF-8">
-   <link rel="stylesheet" href="assets/css/style.css">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-
-   <!-- Useful meta tags -->
-   <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <meta name="robots" content="index, follow">
-   <meta name="google" content="notranslate">
-   <meta name="format-detection" content="telephone=no">
-   <meta name="description" content="">
-
-   <title>Home</title>
-
-</head>
-
-<body>
-
-   <header>
-      <div class="menu-btn">
-         <span></span>
-      </div>
-
-      <nav class="menu">
-         <div class="menu-branding">
-            <div class="portrait">
-               <img src="assets/images/portrait.jpg" alt="">
-            </div>
-         </div>
-         <ul class="menu-nav">
-            <li class="nav-item current">
-               <a href="index.html" class="nav-link">
-                  Home
-               </a>
-            </li>
-            <li class="nav-item">
-               <a href="about.html" class="nav-link">
-                  About Me
-               </a>
-            </li>
-            <li class="nav-item">
-               <a href="work.html" class="nav-link">
-                  My Work
-               </a>
-            </li>
-            <li class="nav-item">
-               <a href="contact.html" class="nav-link">
-                  How To Reach Me
-               </a>
-            </li>
-         </ul>
-      </nav>
-   </header>
-
-   <main id="home">
-      <div class="bg-img" id="your-element-selector">
-         <!--          <img src="assets/images/background.jpg" alt=""> -->
-      </div>
-      <h1 class="lg-heading">
-         Mihail
-         <span class="text-secondary">Shestak</span>
-      </h1>
-      <h2 class="sm-heading">
-         Front-end developer
-      </h2>
-      <div class="icons">
-         <a target="_blank" href="https://www.facebook.com/profile.php?id=100022605559936">
-            <i class="fab fa-facebook fa-2x"></i>
-         </a>
-         <a target="_blank" href="https://www.linkedin.cn/in/shestak1993/">
-            <i class="fab fa-linkedin fa-2x"></i>
-         </a>
-         <a target="_blank" href="https://github.com/Mihail1186">
-            <i class="fab fa-github fa-2x"></i>
-         </a>
-         <a target="_blank" href="https://www.instagram.com/mihail_shestak/">
-            <i class="fab fa-instagram fa-2x"></i>
-         </a>
-         <a target="_blank" href="https://vk.com/id97152902">
-            <i class="fab fa-vk fa-2x"></i>
-         </a>
-      </div>
-
-   </main>
-
-
-   <script src="assets/js/three.r119.min.js"></script>
-   <script src="assets/js/vanta.globe.min.js"></script>
-
-
-   <script src="assets/js/app.js"></script>
-   <script src="assets/js/script.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="ru"><head>   <meta charset="UTF-8"><link rel="stylesheet" href="assets/css/style.min.css"><link rel="shortcut icon" href="favicon.ico"><!-- Useful meta tags --><meta name="format-detection" content="telephone=no"><!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> --><!-- <meta name="robots" content="noindex, nofollow"> --><!-- <meta name="google" content="notranslate"> --><!-- <meta http-equiv="x-ua-compatible" content="ie=edge"> --><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Home</title></head><body>   <header class="header">   <div class="menu-btn">      <span></span>   </div>   <nav class="menu">      <div class="menu-branding">         <div class="menu__avatar avatar">            <picture><source srcset="assets/images/portrait.webp" type="image/webp"><img class="avatar__img" src="assets/images/portrait.jpg" alt="Mihail"></picture>         </div>      </div>      <ul class="menu-nav">         <li class="nav-item current">            <a href="index.html" class="nav-link">               Home            </a>         </li>         <li class="nav-item">            <a href="about.html" class="nav-link">               About Me            </a>         </li>         <li class="nav-item">            <a href="work.html" class="nav-link">               My Work            </a>         </li>         <li class="nav-item">            <a href="contact.html" class="nav-link">               How To Reach Me            </a>         </li>      </ul>   </nav></header>   <main class="page" id="home">      <div class="_container">         <div class="home__inner">            <div class="bg-img">               <picture><source srcset="assets/images/bg.webp" type="image/webp"><img src="assets/images/bg.jpg" alt=""></picture>            </div>            <h1 class="lg-heading">               Mihail               <span class="text-secondary">Shestak</span>            </h1>            <h2 class="sm-heading">               Front-end developer            </h2>            <div class="socials">               <a class="_icon-facebook" target="_blank" href="https://www.facebook.com/profile.php?id=100022605559936">               </a>               <a class="_icon-linkedin" target="_blank" href="https://www.linkedin.cn/in/shestak1993/">               </a>               <a class="_icon-github" target="_blank" href="https://github.com/Mihail1186">               </a>               <a class="_icon-instagram" target=" _blank" href="https://www.instagram.com/mihail_shestak/">               </a>               <a class="_icon-vk" target="_blank" href="https://vk.com/id97152902">               </a>            </div>         </div><!-- home__inner -->      </div><!-- _container -->   </main>   <script src="assets/js/script.min.js"></script></body></html>
