--- a/work.html
+++ b/work.html
@@ -1,133 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-   <meta charset="UTF-8">
-   <link rel="stylesheet" href="assets/css/style.css">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-   crossorigin="anonymous">
-   
-   <!-- Useful meta tags -->
-   <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <meta name="robots" content="index, follow">
-   <meta name="google" content="notranslate">
-   <meta name="format-detection" content="telephone=no">
-   <meta name="description" content="">
-   
-   <title>Work</title>
-   
-</head>
-
-<body>
-
-   <header>
-      <div class="menu-btn">
-         <span></span>
-      </div>
-   
-      <nav class="menu">
-         <div class="menu-branding">
-            <div class="portrait">
-               <img src="assets/images/portrait.jpg" alt="">
-            </div>
-         </div>
-         <ul class="menu-nav">
-            <li class="nav-item current">
-               <a href="index.html" class="nav-link">
-                  Home
-               </a>
-            </li>
-            <li class="nav-item">
-               <a href="about.html" class="nav-link">
-                  About Me
-               </a>
-            </li>
-            <li class="nav-item">
-               <a href="work.html" class="nav-link">
-                  My Work
-               </a>
-            </li>
-            <li class="nav-item">
-               <a href="contact.html" class="nav-link">
-                  How To Reach Me
-               </a>
-            </li>
-         </ul>
-      </nav>
-   </header>
-   <main id="work">
-      <h1 class="lg-heading">
-         My <span class="text-secondary">Work</span>
-      </h1>
-      <h2 class="sm-heading">
-         Check out some of my projects...
-      </h2>
-      <div class="projects">
-         <div class="item">
-            <a target='_blank' href="https://mihail1186.github.io/Personal-blog.github.io/">
-               <img src="assets/images/projects/Personal-blog.jpg" alt="Project">
-            </a>
-            <a target='_blank' href="https://mihail1186.github.io/PINCET.github-io/" class="btn-light">
-               <i class="fas fa-eye"></i> <span>Project</span>
-            </a>
-         </div>
-         <div class="item">
-            <a target='_blank' href="https://mihail1186.github.io/PROdengi.github.io/">
-               <img src="assets/images/projects/PROdengi.jpg" alt="Project">
-            </a>
-            <a target='_blank' href="https://mihail1186.github.io/PINCET.github-io/" class="btn-light">
-               <i class="fas fa-eye"></i> <span>Project</span>
-            </a>
-         </div>
-         <div class="item">
-            <a target='_blank' href="https://mihail1186.github.io/PINCET.github-io/">
-               <img src="assets/images/projects/project1.jpg" alt="Project">
-            </a>
-            <a target='_blank' href="https://mihail1186.github.io/PINCET.github-io/" class="btn-light">
-               <i class="fas fa-eye"></i> <span>Project</span>
-            </a>
-         </div>
-         <div class="item">
-            <a target='_blank' href="https://mihail1186.github.io/legal-technology.github.io/">
-               <img src="assets/images/projects/project2.jpg" alt="Project">
-            </a>
-            <a target='_blank' href="https://mihail1186.github.io/legal-technology.github.io/" class="btn-light">
-               <i class="fas fa-eye"></i><span>Project</span>
-            </a>
-         </div>
-         <div class="item">
-            <a target='_blank' href="https://mihail1186.github.io/Business-Travel.github.io/">
-               <img src="assets/images/projects/project3.jpg" alt="Project">
-            </a>
-            <a target='_blank' href="https://mihail1186.github.io/Business-Travel.github.io/" class="btn-light">
-               <i class="fas fa-eye"></i><span>Project</span>
-            </a>
-         </div>
-         <div class="item">
-            <a target='_blank' href="https://mihail1186.github.io/Mobile-first.github.io/">
-               <img src="assets/images/projects/project4.jpg" alt="Project">
-            </a>
-            <a target='_blank' href="https://mihail1186.github.io/Mobile-first.github.io/" class="btn-light">
-               <i class="fas fa-eye"></i><span>Project</span>
-            </a>
-         </div>
-         <div class="item">
-            <a target='_blank' href="https://mihail1186.github.io/Travel-version_2.github.io/">
-               <img src="assets/images/projects/project5.jpg" alt="Project">
-            </a>
-            <a target='_blank' href="https://mihail1186.github.io/Travel-version_2.github.io/" class="btn-light">
-               <i class="fas fa-eye"></i><span>Project</span>
-            </a>
-         </div>
-      </div>
-   </main>
-   <footer id="main-footer">
-      Copyright &copy 2020
-   </footer>
-   
-
-   <script src="assets/js/app.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="ru"><head>   <meta charset="UTF-8"><link rel="stylesheet" href="assets/css/style.min.css"><link rel="shortcut icon" href="favicon.ico"><!-- Useful meta tags --><meta name="format-detection" content="telephone=no"><!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> --><!-- <meta name="robots" content="noindex, nofollow"> --><!-- <meta name="google" content="notranslate"> --><!-- <meta http-equiv="x-ua-compatible" content="ie=edge"> --><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Works</title></head><body>   <div class="wrapper">      <header class="header">   <div class="menu-btn">      <span></span>   </div>   <nav class="menu">      <div class="menu-branding">         <div class="menu__avatar avatar">            <picture><source srcset="assets/images/portrait.webp" type="image/webp"><img class="avatar__img" src="assets/images/portrait.jpg" alt="Mihail"></picture>         </div>      </div>      <ul class="menu-nav">         <li class="nav-item current">            <a href="index.html" class="nav-link">               Home            </a>         </li>         <li class="nav-item">            <a href="about.html" class="nav-link">               About Me            </a>         </li>         <li class="nav-item">            <a href="work.html" class="nav-link">               My Work            </a>         </li>         <li class="nav-item">            <a href="contact.html" class="nav-link">               How To Reach Me            </a>         </li>      </ul>   </nav></header>      <main class="page" id="works">         <div class="_container">            <h1 class="lg-heading">               My <span class="text-secondary">Works</span>            </h1>            <h2 class="sm-heading">               Check out some of my projects...            </h2>            <div class="projects">               <div class="projects__item">                  <a class="projects__link" target='_blank'                     href="https://mihail1186.github.io/LandScaper-new.github.io/">                     <picture><source srcset="assets/images/projects/LandScaper.webp" type="image/webp"><img class="projects__img" src="assets/images/projects/LandScaper.jpg" alt="Project"></picture>                     <span class="btn-light _icon-eye">Project</span>                  </a>               </div>               <div class="projects__item">                  <a class="projects__link" target='_blank'                     href="https://mihail1186.github.io/barbershop.github.io/">                     <picture><source srcset="assets/images/projects/barbershop.webp" type="image/webp"><img class="projects__img" src="assets/images/projects/barbershop.jpg" alt="Project"></picture>                     <span class="btn-light _icon-eye">Project</span>                  </a>               </div>               <div class="projects__item">                  <a class="projects__link" target='_blank'                     href="https://mihail1186.github.io/Personal-blog.github.io/">                     <picture><source srcset="assets/images/projects/Personal-blog.webp" type="image/webp"><img class="projects__img" src="assets/images/projects/Personal-blog.jpg" alt="Project"></picture>                     <span class="btn-light _icon-eye">Project</span>                  </a>               </div>               <div class="projects__item">                  <a class="projects__link" target='_blank' href="https://mihail1186.github.io/PROdengi.github.io/">                     <picture><source srcset="assets/images/projects/PROdengi.webp" type="image/webp"><img class="projects__img" src="assets/images/projects/PROdengi.jpg" alt="Project"></picture>                     <span class="btn-light _icon-eye">Project</span>                  </a>               </div>               <div class="projects__item">                  <a class="projects__link" target='_blank' href="https://mihail1186.github.io/PINCET.github-io/">                     <picture><source srcset="assets/images/projects/project1.webp" type="image/webp"><img class="projects__img" src="assets/images/projects/project1.jpg" alt="Project"></picture>                     <span class="btn-light _icon-eye">Project</span>                  </a>               </div>               <div class="projects__item">                  <a class="projects__link" target='_blank'                     href="https://mihail1186.github.io/legal-technology.github.io/">                     <picture><source srcset="assets/images/projects/project2.webp" type="image/webp"><img class="projects__img" src="assets/images/projects/project2.jpg" alt="Project"></picture>                     <span class="btn-light _icon-eye">Project</span>                  </a>               </div>               <div class="projects__item">                  <a class="projects__link" target='_blank'                     href="https://mihail1186.github.io/Business-Travel.github.io/">                     <picture><source srcset="assets/images/projects/project3.webp" type="image/webp"><img class="projects__img" src="assets/images/projects/project3.jpg" alt="Project"></picture>                     <span class="btn-light _icon-eye">Project</span>                  </a>               </div>               <div class="projects__item">                  <a class="projects__link" target='_blank' href="https://mihail1186.github.io/Mobile-first.github.io/">                     <picture><source srcset="assets/images/projects/project4.webp" type="image/webp"><img class="projects__img" src="assets/images/projects/project4.jpg" alt="Project"></picture>                     <span class="btn-light _icon-eye">Project</span>                  </a>               </div>               <div class="projects__item">                  <a class="projects__link" target='_blank'                     href="https://mihail1186.github.io/Travel-version_2.github.io/">                     <picture><source srcset="assets/images/projects/project5.webp" type="image/webp"><img class="projects__img" src="assets/images/projects/project5.jpg" alt="Project"></picture>                     <span class="btn-light _icon-eye">Project</span>                  </a>               </div>            </div><!-- projects -->         </div><!-- _container -->      </main>      <footer class="footer">   <div class="footer__copyright">Copyright &#169; 2020</div></footer>   </div><!-- wrapper -->   <script src="assets/js/script.min.js"></script></body></html>
