--- a/about.html
+++ b/about.html
@@ -1,92 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-   <meta charset="UTF-8">
-   <link rel="stylesheet" href="assets/css/style.min.css">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-   crossorigin="anonymous">
-   
-   <!-- Useful meta tags -->
-   <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <meta name="robots" content="index, follow">
-   <meta name="google" content="notranslate">
-   <meta name="format-detection" content="telephone=no">
-   <meta name="description" content="">
-   
-   <title>About</title>
-   
-</head>
-
-<body>
-
-   <header>
-      <div class="menu-btn">
-         <span></span>
-      </div>
-   
-      <nav class="menu">
-         <div class="menu-branding">
-            <div class="portrait">
-               <img src="assets/images/portrait.jpg" alt="">
-            </div>
-         </div>
-         <ul class="menu-nav">
-            <li class="nav-item current">
-               <a href="index.html" class="nav-link">
-                  Home
-               </a>
-            </li>
-            <li class="nav-item">
-               <a href="about.html" class="nav-link">
-                  About Me
-               </a>
-            </li>
-            <li class="nav-item">
-               <a href="work.html" class="nav-link">
-                  My Work
-               </a>
-            </li>
-            <li class="nav-item">
-               <a href="contact.html" class="nav-link">
-                  How To Reach Me
-               </a>
-            </li>
-         </ul>
-      </nav>
-   </header>
-   
-   <main id="about">
-      <h1 class="lg-heading">
-         About <span class="text-secondary">Me</span>
-      </h1>
-      <h2 class="sm-heading">
-         Let me tell you a few things...
-      </h2>
-      <div class="about-info">
-         <div class="about__portrait">
-            <img src="assets/images/portrait.jpg" alt="Mihail Shestak" class="bio-image">
-         </div>
-         <div class="bio">
-            <h3 class="text-secondary">Обо мне</h3>
-            <p>Когда впервые увидел на экране "Hello
-               world!" понял, что это то чему хочу
-               посвятить всего себя! Свое свободное время я посвящаю web-программированию. Пусть сейчас я не имею
-               коммерческого опыта работы в данной сфере, но я надеюсь, что в ближайшее время я получу желанное рабочее
-               место и найдутся люди, которые по достоинству оценят мои навыки, желание работать и развиваться.</p>
-            <p>Я стремлюсь к идеалу. Это касается также Front-end'а. Я продолжаю заниматься самообучением и осваиванием новые технологии, системы и движки, которые
-               очень сильно могут упростить работу современному разработчику и даже Front-end для меня не предел.
-            </p>
-         </div>
-      </div>
-   </main>
-   <footer id="main-footer">
-      Copyright &copy 2020
-   </footer>
-   
-
-   <script src="assets/js/app.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="ru"><head>   <meta charset="UTF-8"><link rel="stylesheet" href="assets/css/style.min.css"><link rel="shortcut icon" href="favicon.ico"><!-- Useful meta tags --><meta name="format-detection" content="telephone=no"><!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> --><!-- <meta name="robots" content="noindex, nofollow"> --><!-- <meta name="google" content="notranslate"> --><!-- <meta http-equiv="x-ua-compatible" content="ie=edge"> --><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>About</title></head><body>   <div class="wrapper">      <header class="header">   <div class="menu-btn">      <span></span>   </div>   <nav class="menu">      <div class="menu-branding">         <div class="menu__avatar avatar">            <picture><source srcset="assets/images/portrait.webp" type="image/webp"><img class="avatar__img" src="assets/images/portrait.jpg" alt="Mihail"></picture>         </div>      </div>      <ul class="menu-nav">         <li class="nav-item current">            <a href="index.html" class="nav-link">               Home            </a>         </li>         <li class="nav-item">            <a href="about.html" class="nav-link">               About Me            </a>         </li>         <li class="nav-item">            <a href="work.html" class="nav-link">               My Work            </a>         </li>         <li class="nav-item">            <a href="contact.html" class="nav-link">               How To Reach Me            </a>         </li>      </ul>   </nav></header>      <main class="page" id="about">         <div class="_container">            <h1 class="lg-heading">               About <span class="text-secondary">Me</span>            </h1>            <h2 class="sm-heading">               Let me tell you a few things...            </h2>            <div class="about-info">               <div class="about__avatar avatar">                  <picture><source srcset="assets/images/portrait.webp" type="image/webp"><img class="avatar__img" src="assets/images/portrait.jpg" alt="Mihail Shestak"></picture>               </div>               <div class="about__text">                  <h3 class="text-secondary">Обо мне</h3>                  <p>Когда впервые увидел на экране "Hello                     world!" понял, что это то чему хочу                     посвятить всего себя! Свое свободное время я посвящаю web-программированию. Пусть сейчас я не имею                     коммерческого опыта работы в данной сфере, но я надеюсь, что в ближайшее время я получу желанное                     рабочее                     место и найдутся люди, которые по достоинству оценят мои навыки, желание работать и развиваться.                  </p>                  <p>Я стремлюсь к идеалу. Это касается также Front-end'а. Я продолжаю заниматься самообучением и                     осваиванием новые технологии, системы и движки, которые                     очень сильно могут упростить работу современному разработчику и даже Front-end для меня не предел.                  </p>               </div>            </div>         </div>      </main>      <footer class="footer">   <div class="footer__copyright">Copyright &#169; 2020</div></footer>   </div><!-- wrapper -->   <script src="assets/js/script.min.js"></script></body></html>
